Generate data using snakemake

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ __pycache__/
 data/williams/
 
 data/simulation/sim_multi_state_tree_node_character_matrix.csv
+data/simulation/ground_truth/
+
+.snakemake/
