Add pairwise accuracy for kmeans

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 data/williams/
 
 data/simulation/sim_multi_state_tree_node_character_matrix.csv
-data/simulation/
+data/simulation/*
 
 .snakemake/
+
+!data/simulation/results/
