Snakefile for williams

--- a/config.yaml
+++ b/config.yaml
@@ -40,3 +40,42 @@ estimated_fp: 0.0018
 estimated_fn: 0.16
 
 nseeds: 5
+
+
+sample_ids:
+    - DG1134
+    - SA039
+    - SA1049
+    - SA1052
+    - SA1055
+    - SA1093
+    - SA1142
+    - SA1181
+    - SA1188
+    - SA530
+    - SA605
+    - SA906a
+    - DG1197
+    - SA1035
+    - SA1050
+    - SA1053
+    - SA1056
+    - SA1096
+    - SA1162
+    - SA1182
+    - SA1292
+    - SA535
+    - SA609
+    - SA906b
+    - OV2295
+    - SA1047
+    - SA1051
+    - SA1054
+    - SA1091
+    # - SA1135
+    - SA1180
+    - SA1184
+    - SA501
+    - SA604
+    - SA610
+  
