--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,21 @@
 [project]
 name = "SCOPE"
 version = "0.1.0"
+dependencies = [
+    "fastparquet",
+    "gurobipy==12.0.3",
+    "ipykernel==6.30.1",
+    "matplotlib==3.10.6",
+    "networkx==3.5",
+    "numpy==2.3.3",
+    "pandas==2.3.3",
+    "pyarrow==22.0.0",
+    "pygraphviz==1.14",
+    "scikit-learn==1.7.2",
+    "scipy==1.16.2",
+    "seaborn==0.13.2",
+    "snakemake==9.13.4",
+]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
