Refactor notebook for hypothesis test

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ data/simulation/sim_multi_state_tree_node_character_matrix.csv
 data/simulation/*
 data/laks/scope/*
 
+data/laks/ov2295_cell_cn.csv.gz
+
 .snakemake/
 
 !data/simulation/results/
