--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,4 @@ dependencies = [
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["scope", "data_processors"]
+packages = ["scope", "data_processors", "evaluate", "plotters"]
