Rerun Meta-Cohort Dataset with LOH conflicts 50

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,14 @@ data/laks/ov2295_cell_cn.csv.gz
 .snakemake/
 
 !data/simulation/results/
-!data/williams/scratch/
+data/williams/scratch/
 
 data/williams/scratch/*/snv_counts.csv
 data/williams/scratch/*/hscn_clones.csv
 
+outputs/scope/williams/
+
 *.egg-info/
 *.egg-info
 .DS_Store
+.vscode
